# sync

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
metaskingsync/: __main__.py  main.py  sync.py
metaskingsync/args/: __init__.py  model.py  parse.py
metaskingsync/provider/: __init__.py  base.py  jira.py  json.py  metasking.py  toggl.py
