[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/metasking/metasking-sync

[options]
packages = find:
python_requires = >=3.11
install_requires =
    pydantic~=1.10.12
    pydantic-argparse~=0.8.0
    rich~=13.5.3
    ruamel.yaml~=0.17.32
    requests~=2.31.0
    jsonstream~=0.0.1
    python_dateutil~=2.8.2

[options.entry_points]
console_scripts =
    metask-sync = metaskingsync:main
